--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "author": "alireza ibrahimi",
   "license": "MIT",
   "dependencies": {
-    "firebase": "^10.7.0"
+    "firebase": "^10.0.0"
   },
   "devDependencies": {
     "@firebase/app-types": "^0.9.0",
@@ -54,7 +54,7 @@
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "jest": "29.7.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.3.2"
